--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | Mahjong Dragon Slots</title>
+  <title>Cocos Creator | MaJiang</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -53,7 +53,7 @@
 <script src="src/import-map.46514.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.fa677.js').catch(function(err) { console.error(err); })
+    System.import('./index.803e4.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
