--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | MaJiang</title>
+  <title>Cocos Creator | Mahjong Dragon Slots</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -50,10 +50,10 @@
 <script src="src/system.bundle.543e6.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="src/import-map.46514.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="src/import-map.a6f4a.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.803e4.js').catch(function(err) { console.error(err); })
+    System.import('./index.7d93d.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
