--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script src="src/import-map.a6f4a.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.7d93d.js').catch(function(err) { console.error(err); })
+    System.import('./index.dd631.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
